--- a/pom.xml
+++ b/pom.xml
@@ -202,6 +202,7 @@
     <bouncycastle.version>1.60</bouncycastle.version>
     <tink.version>1.6.0</tink.version>
     <tomcat.version>9.0.63</tomcat.version>
+    <tomcat-embed-core.version>9.0.72</tomcat-embed-core.version>
     <!--
     If you are changing Arrow version specification, please check
     ./python/pyspark/sql/pandas/utils.py, and ./python/setup.py too.
@@ -2431,7 +2432,7 @@
       <dependency>
         <groupId>org.apache.tomcat.embed</groupId>
         <artifactId>tomcat-embed-core</artifactId>
-        <version>${tomcat.version}</version>
+        <version>${tomcat-embed-core.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.tomcat</groupId>
